--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,27 @@
     box-shadow: 2px 2px 5px #000;
     opacity: .9;
 }
+
+
+.navbar .nav-item .nav-link {
+    color: #fff;
+}
+
+.main-header{
+    position: relative;
+    background: url(../img/background.jpg);
+    background-size: cover;
+    min-height: 500px;
+}
+
+.background-ovelay{
+    background: rgba(48, 51, 107, .7);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.form-control, .btn{
+    border-radius: 0;
+}
